
Ctrlproxy 3.0.7 UNRELEASED

  FEATURES

    * Add 'create-implicit' option.

  BUG FIXES

    * Handle client-specific admin commands being run without a client 
      more gracefully.

    * Be less verbose about unredirectable responses.

    * Avoid usage of blocking /dev/random for SSL code. (Andreas Schneider)

    * Move time in ctcp requests. (#197)

    * Support storing exception lists.

	* Fix handling of channel and user modes. (#196)

  INTERNALS

    * Import non-blocking GIOChannel improvements from libsoap into 
      the SSL wrapper code. (Andreas Schneider)


Ctrlproxy 3.0.6 2008-04-13

  IMPROVEMENTS

    * Add report-time-offset setting.
    
    * New settings ``port'', ``linestack'', ``logging'', ``password'',
      ``default-network'', ``auto-away-message'', ``auto-away-nick'', 
      ``auto-away-enable'' and ``auto-away-time''.

    * Simplify files in networks/ further by storing keys in ~/.ctrlproxy/keys 
      and having a list of channels to autojoin. (#76)

    * Only update autojoin settings when ctrlproxy is completely logged in. 
      (#113)

    * Increase the debug level at which messages about joins/parts are 
      logged.

    * Put linestack state data in separate files. This will make it possible 
      in the future to remove some of the state files.

    * Avoid data overhead when responding to /NAMES out of cache.

    * Add --check-running option.

    * The pid file is now read to check whether another instance of 
      ctrlproxy is already running.

    * ``bind'' is now also accepted in the global section of the network 
      configuration. (#194)

    * New configuration variable ``autocmd'' in network configuration 
      can contain a list (semi-colon-seperated) of commands to send when
      logged in to a server. (#152)

  BUG FIXES

    * Improve handling of empty pid files. (#186)

    * Handle out of disk space correctly. (#91)

    * Don't "forget" listener password.
